# planit-spike

./: .gitignore  NOTES.md  README.md  fetcher.py  output-prod-daily-log.txt  output-prod-fetch-log.txt  pyproject.toml  requirements.txt  sample_jobs.json  test_dead_councils.json
.claude/: settings.json
output/: run_report.json
output-extension/: run_report.json
output-extension/Bradford/26_02066_FUL/: contacts.html  dates.html  details.html  docs.html
output-extension/Cornwall/PA26_03485/: contacts.html  dates.html  details.html  docs.html
output-extension/Horsham/CA_26_0084/: contacts.html  dates.html  details.html  docs.html
output-extension/MidKent/26_502512_SUB/: contacts.html  dates.html  details.html  docs.html
output-prod-fetch/: run_report.json
output-prod-fetch/Bradford/26_02066_FUL/: contacts.html  dates.html  details.html  docs.html
output-verify/: run_report.json
src/planit_spike/: __init__.py  cli.py  config.py  daily.py  document_fetcher.py  document_parser.py  errors.py  fetch.py  multi_portal.py  paths.py  planit_client.py  portal_detect.py  report.py  runner.py  throttle.py  types.py
tests/: test_daily.py  test_document_fetcher.py  test_document_parser.py  test_errors.py  test_fetch.py  test_integration.py  test_multi_portal.py  test_paths.py  test_planit_client.py  test_portal_detect.py
tests/fixtures/: bradford_details.html  bradford_docs.html  bradford_docs_table.html  cornwall_details.html  cornwall_docs.html  sample_planit_created_daily.json  sample_planit_created_list.json  sample_planit_detail.json
(+49 files in other folders)
