[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "planit-spike"
version = "0.1.0"
description = "Fetch raw HTML metadata for UK planning applications from Idox portals."
requires-python = ">=3.11"
dependencies = [
    "httpx==0.28.1",
    "certifi>=2025.8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
planit-spike = "planit_spike.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/planit_spike"]

[tool.pytest.ini_options]
markers = [
    "live: tests that hit real network endpoints (skipped by default)",
]
